--- a/single-blog.html
+++ b/single-blog.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Single blog sample</title>
 </head>
 <body>
-<div id="login"></div>
-<script type="module" src="/src/login.js"></script>
+<div id="single-blog"></div>
+<script type="module" src="/src/single-blog.js"></script>
 </body>
 </html>
