--- a/web.html
+++ b/web.html
@@ -7,7 +7,7 @@
     <title>魔法少女的奇妙日常</title>
 </head>
 <body>
-<div id="app"></div>
-<script type="module" src="/src/main.js"></script>
+<div id="web"></div>
+<script type="module" src="/src/web.js"></script>
 </body>
 </html>
