--- a/register.html
+++ b/register.html
@@ -7,7 +7,7 @@
     <title>Register</title>
 </head>
 <body>
-<div id="register"></div>
+<div id="app"></div>
 <script type="module" src="/src/register.js"></script>
 </body>
 </html>
