利用不多的有信号的时间传点。我累死了，得先睡觉了

--- a/NPUSEC-frontend/index.html
+++ b/NPUSEC-frontend/index.html
@@ -756,7 +756,20 @@
 		<span class="circle"><img src="static/picture/circle.svg" alt="" class="fn__svg"></span>
 	</a>
 	<!-- !To top -->
-	 
+    <!-- Video Shortcode -->
+    <div class="NFTLeo_fn_video">
+        <div class="bg_overlay">
+            <div class="bg_image" data-bg-img="img/hero/bg.jpg"></div>
+            <div class="bg_color"></div>
+        </div>
+        <div class="v_content">
+            <div>
+                <audio src="static/music/DSP_BGM15_Leo.ogg" autoplay loop></audio>
+            </div>
+        </div>
+
+    </div>
+    <!-- !Video Shortcode -->
 	
 </div>
 <!-- !Main -->
