目前需要解决UI的缩放，这和预想的结果差太多了。明天赶快的。

--- a/moban7436/moban7436/about.html
+++ b/moban7436/moban7436/about.html
@@ -286,7 +286,7 @@
 					</div>
 					<div class="v_content">
 						<div>
-							<audio src="../../NPUSEC-frontend/static/"></audio>
+							<audio src="../../NPUSEC-frontend/static/music/DSP_BGM15_Leo.ogg"></audio>
 						
 						</div>
 					</div>
@@ -559,7 +559,6 @@
 <!-- Scripts -->
 <script type="text/javascript" src="static/js/jquery.js"></script>
 <script type="text/javascript" src="static/js/plugins.js"></script>
-<!--[if lt IE 10]> <script type="text/javascript" src="js/ie8.js"></script> <![endif]-->
 <script type="text/javascript" src="static/js/init.js"></script>
 <!-- !Scripts -->
 
