--- a/index.html
+++ b/index.html
@@ -3,11 +3,31 @@
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
+    <meta name="author" content="NPUSEC">
+    <meta name="description" content="NPUSEC">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Testing</title>
+      <link rel="preconnect" href="https://fonts.googleapis.com/">
+      <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
+      <link rel="preconnect" href="https://fonts.googleapis.com/">
+      <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
+      <link href="src/static/css/css2.css" rel="stylesheet">
+      <link type="text/css" rel="stylesheet" href="src/static/css/plugins.css">
+      <link type="text/css" rel="stylesheet" href="src/static/css/style.css">
   </head>
-  <body>
+
+
+
+  <body class="home-static">
     <div id="app"></div>
     <script type="module" src="/src/index.js"></script>
+    <!-- Scripts -->
+    <script type="text/javascript" src="src/static/js/jquery.js"></script>
+    <script type="text/javascript" src="src/static/js/plugins.js"></script>
+    <script type="text/javascript" src="src/static/js/init.js"></script>
+    <!-- !Scripts -->
   </body>
+
+
+
 </html>
