--- a/web.html
+++ b/web.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>魔法少女的奇妙日常</title>
+    <title>NPUSEC-Web</title>
 </head>
 <body>
 <div id="app"></div>
