--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
       <link rel="preconnect" href="https://fonts.googleapis.com/">
       <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
-      <link href="src/static/css/css2.css" rel="stylesheet">
-      <link type="text/css" rel="stylesheet" href="src/static/css/plugins.css">
-      <link type="text/css" rel="stylesheet" href="src/static/css/style.css">
+      <link href="/src/static/css/css2.css" rel="stylesheet">
+      <link type="text/css" rel="stylesheet" href="/src/static/css/plugins.css">
+      <link type="text/css" rel="stylesheet" href="/src/static/css/style.css">
   </head>
 
 
@@ -22,9 +22,9 @@
     <div id="app"></div>
     <script type="module" src="/src/index.js"></script>
     <!-- Scripts -->
-    <script type="text/javascript" src="src/static/js/jquery.js"></script>
-    <script type="text/javascript" src="src/static/js/plugins.js"></script>
-    <script type="text/javascript" src="src/static/js/init.js"></script>
+    <script type="text/javascript" src="/src/static/js/jquery.js"></script>
+    <script type="text/javascript" src="/src/static/js/plugins.js"></script>
+    <script type="text/javascript" src="/src/static/js/init.js"></script>
     <!-- !Scripts -->
   </body>
 
