统一名称，IDE自动收入出问题了

--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@
     <meta name="author" content="NPUSEC">
     <meta name="description" content="NPUSEC">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NPUSEC-博客文章</title>
+    <title>NPUSEC-Blogs</title>
     <link rel="preconnect" href="https://fonts.googleapis.com/">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
     <link rel="preconnect" href="https://fonts.googleapis.com/">
