--- a/login.html
+++ b/login.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
+    <meta name="author" content="NPUSEC">
+    <meta name="description" content="NPUSEC">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-  </head>
+    <title>NPUSEC</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com/">
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
+    <link rel="preconnect" href="https://fonts.googleapis.com/">
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
+</head>
+
   <body>
     <div id="app"></div>
     <script type="module" src="/src/login.js"></script>
+    <!-- Scripts -->
+    <script type="text/javascript" src="/src/static/js/jquery.js"></script>
+    <script type="text/javascript" src="/src/static/js/plugins.js"></script>
+    <script type="text/javascript" src="/src/static/js/init.js"></script>
+    <!-- !Scripts -->
   </body>
 </html>
