--- a/NPUSEC-frontend/index.html
+++ b/NPUSEC-frontend/index.html
@@ -737,7 +737,7 @@
 						
 						<div class="fb_right">
 							<ul>
-								<li><a href="roadmap.html">路线图</a></li>
+								<li><a href="../roadmap.html">路线图</a></li>
 							</ul>
 						</div>
 						
