--- a/single-blog.html
+++ b/single-blog.html
@@ -3,11 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
+    <meta name="author" content="NPUSEC">
+    <meta name="description" content="NPUSEC">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Single blog sample</title>
+    <title>single-blog</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com/">
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
+    <link rel="preconnect" href="https://fonts.googleapis.com/">
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
 </head>
 <body>
-<div id="single-blog"></div>
+<div id="app"></div>
 <script type="module" src="/src/single-blog.js"></script>
+<!-- Scripts -->
+<script type="text/javascript" src="/src/static/js/jquery.js"></script>
+<script type="text/javascript" src="/src/static/js/plugins.js"></script>
+<script type="text/javascript" src="/src/static/js/init.js"></script>
+<!-- !Scripts -->
 </body>
 </html>
