--- a/NPUSEC-frontend/Sept - 2023.html
+++ b/NPUSEC-frontend/Sept - 2023.html
@@ -169,7 +169,7 @@
 						<p>
 							<a href="index.html">首页</a>
 							<span class="separator">/</span>
-							<a href="roadmap.html">路线图</a>
+							<a href="../roadmap.html">路线图</a>
 							<span class="separator">/</span>
 							<span class="current">总结</span>
 						</p>
@@ -335,7 +335,7 @@
 						
 						<div class="fb_right">
 							<ul>
-								<li><a href="roadmap.html">路线图</a></li>
+								<li><a href="../roadmap.html">路线图</a></li>
 							</ul>
 						</div>
 						
