--- a/NPUSEC-frontend/blog-single.html
+++ b/NPUSEC-frontend/blog-single.html
@@ -549,7 +549,7 @@
 						
 						<div class="fb_right">
 							<ul>
-								<li><a href="roadmap.html">总路线图</a></li>
+								<li><a href="../roadmap.html">总路线图</a></li>
 								<li><a href="#">关于Web组</a></li>
 							</ul>
 						</div>
